src/less/variables.less
/*============================
       Global Variables
==============================*/

/*-------------------
       Colors
--------------------*/
@color-dark-0 : #000000;
@color-dark-1 : #0D0D0D;
@color-dark-2 : #1A1A1A;
@color-dark-3 : #262626;
@color-dark-4 : #515151;
@color-dark-5 : #646464;
@color-dark-6 : #777777;

@color-light-0 : #FFFFFF;
@color-light-1 : #FAFAFA;
@color-light-2 : #F5F5F5;
@color-light-3 : #F0F0F0;
@color-light-4 : #EBEBEB;
@color-light-5 : #E6E6E6;
@color-light-6 : #E0E0E0;

@color-text-dark : #1A1A1A;
@color-text-light : #FFFFFF;
@color-text-medium-dark: #666666;
@color-text-medium-light : #999999;

@color-interactive : #D9A000;
@color-interactive-light : #E2BF3D;

@color-active : #425CBD;
@color-active-light : #6683ED;

@highlightBackground      : @color-active;
@highlightColor           : @color-text-light;

/* FONTS */
@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,300italic,300,400italic,600,600italic,700,700italic');

@emSize           : 12px;
@pageFont         : 'Open Sans', 'Helvetica Neue', Arial, Helvetica, sans-serif;
@headerFont       : 'Open Sans', 'Helvetica Neue', Arial, Helvetica, sans-serif;
@fontSize         : 1.333333rem; /*16px*/
@lineHeight       : 2rem;
@fontSmoothing    : false;

@h1               : 6.83333rem; /*82px*/
@h2               : 3.66667rem; /*44px*/
@h3               : 2.16667rem; /*26px*/
@h4               : 1.75000rem; /*21px*/
@h5               : 1.33333rem; /*16px*/
@h6               : 0.91667rem; /*11px*/

@h1Lineheight     : 8rem;
@h2Lineheight     : 5rem;
@h3Lineheight     : 3rem;
@h4Lineheight     : 2.5rem;
@h5Lineheight     : 2rem;
@h6Lineheight     : 1.5rem;


@miniSize        : @h6;
@tinySize        : @h6;
@smallSize       : 1.1666666667rem; /*14px*/
@mediumSize      : @h5;
@largeSize       : @h4;
@bigSize         : @h4;
@hugeSize        : @h3;
@massiveSize     : @h3;

@text-light : 300;
@text-book : 400;
@text-medium: 500;
@text-semibold : 600;
@text-bold : 700;
@text-black : 800;


/* CONTAINER */

@mobileWidth: auto;
@mobileBreakpoint : 320px;
@mobileGutter: 1rem;

@tabletWidth: 752px;
@tabletBreakpoint : 768px;
@tabletGutter: auto;

@smallMonitorBreakpoint: 988px;
@smallMonitorWidth: 960px;
@smallMonitorGutter: auto;

@largeMonitorWidth: 1200px;
@largeMonitorBreakpoint: 1228px;
@largeMonitorGutter: auto;

/* SIZE VARIABLES */


@miniVariables : {
  .variables(){

    @iconSize : 2rem;
    @fontSize:  @h6;
    @lineHeight: @h6Lineheight;
    @padding : 0.25rem 1rem;
    @orPadding : 1.5rem;
    @orLineHeight : 1.4rem;
    @orHeight : @h6Lineheight;
    @underlineCorrection: -1px;
    @toggleLine: 1px;

  }
};

@smallVariables : {
  .variables(){

    @iconSize : 3rem;
    @fontSize:  @smallSize;
    @lineHeight: @h5Lineheight;
    @padding : 0.5rem 1rem;
    @orPadding : 1.5rem;
    @orHeight : @h5Lineheight;
    @orLineHeight : 1.9rem;
    @underlineCorrection: -1px;
    @toggleLine: 2px;

  }
};

@normalVariables : {
  .variables(){

    @iconSize : 4rem;
    @fontSize:  @mediumSize;
    @lineHeight: 2rem;
    @padding : 1.0833333rem 1rem 0.9188888rem 1rem;
    @orPadding : 2rem;
    @orLineHeight : 3rem;
    @orHeight : 3rem;
    @underlineCorrection : -1px;
    @toggleLine : 3px;

  }
};

@largeVariables : {
  .variables(){

    @iconSize : 5rem;
    @fontSize:  @largeSize;
    @lineHeight: @h5Lineheight;
    @padding : 1.5rem 1.25rem;
    @orPadding : 2.5rem;
    @orLineHeight : 3.5rem;
    @orHeight : 3.5rem;
    @underlineCorrection: 2px;
    @toggleLine: 4px;

  }
};


@hugeVariables : {
  .variables(){

    @iconSize : 6rem;
    @fontSize:  @hugeSize;
    @lineHeight: @h2Lineheight;
    @padding : 0.5rem 1.5rem;
    @orPadding : 3rem;
    @orLineHeight : 3.9rem;
    @orHeight : 4rem;
    @underlineCorrection: -1rem;
    @toggleLine: 6px;
  }
};

